<resources>
    <string name="app_name">Lotus</string>
    <string name="action_settings">Settings</string>
    <string name="return_button_label">Retornar</string>
    <string name="next_button_label">Próximo</string>
    <string name="home_button_label">Início</string>
    <string name="cards_button_label">Cartas</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home_title_text">Protótipo Lotus</string>
    <string name="telepathy_label">Telepatia</string>
    <string name="capitals_label">Capitais</string>
    <string name="jogral_label">Jogral</string>
    <string name="music_label">Música</string>
    <string name="cards_label">Cartas</string>
    <string name="exit_label">Sair</string>

    <!-- Musica -->
    <string name="english_enabled">Palavras em Inglês</string>

    <string name="first_fragment_label">Tela de Início</string>
    <string name="capitals_fragment_label">Jogo das Capitais</string>
    <string name="telepathy_fragment_label">Jogo da Telepatia</string>
    <string name="jogral_fragment_label">Jogo do Jogral</string>
    <string name="word_fragment_label">Jogo da Música</string>
    <string name="cards_fragment_label">Tela de Cartas</string>
    <string name="game_fragment_label">Carta de Jogo</string>
    <string name="duel_fragment_label">Carta de Prenda</string>
    <string name="add_fragment_label">Adicione um Jogo</string>

    <!-- Cartas -->
    <string name="game_label">Carta de Jogo</string>
    <string name="duel_label">Carta de Prenda</string>
    <string name="dice_label">Dados</string>
    <string name="games_screen_label">Tela de Jogos</string>
    <string name="buy_card_label">Compra Carta</string>
    <string name="go_to_game_label">Abrir Jogo</string>
    <string name="team_label">Modo Competição</string>
    <string name="add_game_label">Adicione um Jogo</string>

    <!-- Add Game -->
    <string name="new_game_placeholder">Nome do Jogo</string>
    <string name="is_competitive_placeholder">Tem Modo Competitivo?</string>
    <string name="is_solo_placeholder">Tem Modo Individual?</string>
    <string name="add_button_label">Adicionar</string>

    <!-- Tela Capitais -->
    <string name="answer_label">Resposta</string>

    <string name="dark_mode_label">Modo Escuro</string>
    <string name="light_mode_label">Modo Claro</string>
</resources>