<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.lotus.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_CapitalsFragment"
            app:destination="@id/CapitalsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_TelepathyFragment"
            app:destination="@id/TelepathyFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_JogralFragment"
            app:destination="@id/JogralFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_WordFragment"
            app:destination="@id/WordFragment" />
    </fragment>
    <fragment
        android:id="@+id/CapitalsFragment"
        android:name="com.example.lotus.CapitalsFragment"
        android:label="@string/capitals_fragment_label"
        tools:layout="@layout/fragment_capitals">

        <action
            android:id="@+id/action_CapitalsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/TelepathyFragment"
        android:name="com.example.lotus.TelepathyFragment"
        android:label="@string/telepathy_fragment_label">
        <action
            android:id="@+id/action_telepathyFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/JogralFragment"
        android:name="com.example.lotus.JogralFragment"
        android:label="@string/jogral_fragment_label">
        <action
            android:id="@+id/action_JogralFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/WordFragment"
        android:name="com.example.lotus.WordFragment"
        android:label="@string/word_fragment_label">
        <action
            android:id="@+id/action_WordFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>